# ml-journey

./: .gitignore  README.md  pyproject.toml
datasets/: shakespearesonnet.txt
ffmpeg/scripts/: 01-generate.sh  03-assemble.sh
implementations/: eda_1.ipynb  linear_regression.ipynb  logistic_regression.ipynb  multivariate_linear_regression.ipynb  pandas.ipynb  question4_ls_vs_lasso.py
notebooks/MSCFE0/: FE_GWP1_Group_14043_COM.ipynb  assignment.ipynb  nonstationarity.ipynb
notebooks/MSCFE_DER_PRI/: team_b.ipynb
notebooks/MSCFE_binomial_tree/: FE_GWP1_full_submission.ipynb  team_b.ipynb
notebooks/algo/: binary_search.ipynb  merge_sort.ipynb
notebooks/customer_churn/: customer_churn.ipynb
notebooks/linear_regression/: derivatives.ipynb
notebooks/loss_fn/: loss_function.ipynb
notebooks/micrograd/: makemore.ipynb  makemore2.ipynb  makemore3.ipynb  makemore4.ipynb  makemore5.ipynb  micrograd_from_scratch.ipynb
notebooks/nanogpt/: nanogpt.ipynb
notebooks/tree_models/: tree.ipynb
notes/: day-1.txt  day-2.txt  day-3.txt  day-4.txt  day-5.txt  day-6.txt  day-7.txt  makemore.md  week-2-summary.md
projects/: api-project-ideas.md  continual-learning-reproduction-curriculum.md  world-models-real-time-decision-roadmap.md
research/p1/encodings/: RoPE.ipynb
research/p2/: 1-bit.ipynb  1_bit.ipynb  dist.ipynb  lora.ipynb  qlora.ipynb  quant.ipynb
research/p3/: adapterpertask.ipynb  causal_trace.ipynb  ewc.ipynb  exreplay.ipynb  forgetting.ipynb  genreplay.ipynb  ttl.ipynb
research/world_models/: wm0_agent_loop.ipynb  wm0_bandits.ipynb  wm0_gridworld.ipynb
(+6 files in other folders)
