[project]
name = "ml-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tiktoken>=0.13.0",
    "tqdm>=4.68.3",
    "xgboost>=3.2.0",
    "yfinance>=1.2.1",
]
