[project]
name = "ml-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "gymnasium>=1.3.0",
    "matplotlib>=3.10.8",
    "minigrid>=3.1.0",
    "numpy>=2.4.2",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.9.0",
    "statsmodels>=0.14.6",
    "tiktoken>=0.13.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "tqdm>=4.68.3",
    "wandb>=0.28.0",
    "xgboost>=3.2.0",
    "yfinance>=1.2.1",
]
